--- a/css/home.css
+++ b/css/home.css
@@ -4,46 +4,39 @@
   padding: 0;
 }
 
-.wrapper {
-  max-width: 900px;
-  margin: auto;
-  padding: 20px;
-}
-
 body {
+  background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
+  background-size: cover;
   font-family: "Open Sans", sans-serif;
+  padding: 0 20px;
 }
 
 header {
   background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
   background-size: cover;
   text-align: center;
+  padding: 20px;
+  font-size: 1.25rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+header a {
+  text-decoration: none;
   color: white;
-  padding: 50px 20px;
 }
 
-header h1 {
-  font-family: "Raleway", sans-serif;
-  margin-bottom: 25px;
-  letter-spacing: 2px;
-  font-weight: 300;
-}
-
-header hr {
-  border: 0.5px solid #FB9C1B;
-  width: 80%;
-  margin: 20px auto;
-}
-
-header p {
-  font-size: 1.5rem;
-  font-family: "Montserrat", sans-serif;
-  letter-spacing: 1.5px;
-  font-weight: 400;
-  font-style: italic;
+header img {
+  vertical-align: middle;
 }
 
 main {
+  background: white;
+  max-width: 900px;
+  margin: auto;
+  padding: 5px 20px 25px;
+  border-radius: 15px;
   counter-reset: a;
 }
 
@@ -70,7 +63,7 @@ main ol {
   counter-increment: a;
   counter-reset: b;
   list-style: none;
-  columns: 2;
+  columns: 1;
 }
 
 main .li-div::before {
@@ -101,9 +94,19 @@ main a:hover {
 }
 
 /* Media Queries */
+@media (min-width: 700px) {
+  main {
+    padding: 5px 35px 25px;
+  }
+
+  main ol {
+    columns: 2;
+  }
+}
+
 @media (min-width: 900px) {
-  header hr {
-    width: 70%;
+  main {
+    padding: 5px 50px 25px;
   }
 
   main ol {
