--- a/css/page.css
+++ b/css/page.css
@@ -1,17 +1,17 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 .wrapper {
-  max-width: 900px;
+  max-width: 800px;
   margin: auto;
   padding: 20px;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding-bottom: 100px;
 }
 
 header {
@@ -38,7 +38,6 @@ main h1 {
   font-family: "Raleway", sans-serif;
   font-variant: small-caps;
   color: #09457e;
-  margin: 1.5rem 0;
   font-weight: 300;
   display: flex;
   justify-content: space-between;
@@ -52,8 +51,7 @@ main h2 {
   letter-spacing: 0.5px;
   font-variant: small-caps;
   font-size: 2rem;
-  margin: 1.25rem 0;
-  font-weight: 300;
+  font-weight: normal;
 }
 
 main img#yt-img {
@@ -61,6 +59,7 @@ main img#yt-img {
 }
 
 main a#yt-link {
+  font-family: "Open Sans", sans-serif;
   display: inline-block;
   flex-shrink: 0;
   font-size: 0.8rem;
@@ -78,8 +77,13 @@ main a#yt-link:hover {
   border: 1px solid #333;
 }
 
-main p {
+main p,
+main ul {
   line-height: 1.75rem;
+}
+
+.img-fluid {
+  width: 100%;
 }
 
 /* Media Queries */
