--- a/css/prism.css
+++ b/css/prism.css
@@ -131,12 +131,15 @@ pre[class*="language-"]:after {
 
 .token.selector,
 .token.attr-name,
-.token.string,
 .token.char,
 .token.function,
 .token.builtin,
 .token.inserted {
   color: #2f9c0a;
+}
+
+.token.string {
+  color: #7e3409;
 }
 
 .token.operator,
