--- a/css/home.css
+++ b/css/home.css
@@ -95,24 +95,26 @@ main a:hover {
 
 main img#yt-img {
   vertical-align: middle;
+  margin-right: 3px;
 }
 
 main a#yt-link {
   font-family: "Open Sans", sans-serif;
   display: inline-block;
   font-size: 0.8rem;
-  color: black;
+  background: #09457e;
+  color: white;
+  border: 1px solid #333;
   text-decoration: none;
-  border: 1px solid red;
   border-radius: 5px;
   padding: 2px 10px;
   margin-top: 0.8rem;
 }
 
 main a#yt-link:hover {
-  background: #09457e;
-  color: white;
-  border: 1px solid #333;
+  background: white;
+  color: #09457e;
+  border: 1px solid red;
 }
 
 /* Media Queries */
