--- a/css/page.css
+++ b/css/page.css
@@ -2,16 +2,12 @@
   box-sizing: border-box;
 }
 
-.wrapper {
-  max-width: 800px;
-  margin: auto;
-  padding: 20px;
-}
-
 body {
   font-family: "Open Sans", sans-serif;
   margin: 0;
-  padding-bottom: 100px;
+  background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
+  background-size: cover;
+  padding: 0 20px;
 }
 
 header {
@@ -32,6 +28,14 @@ header a {
 
 header img {
   vertical-align: middle;
+}
+
+main {
+  background: white;
+  max-width: 800px;
+  margin: 0 auto 100px;
+  padding: 5px 20px 25px;
+  border-radius: 15px;
 }
 
 main h1 {
@@ -56,25 +60,26 @@ main h2 {
 
 main img#yt-img {
   vertical-align: middle;
+  margin-right: 3px;
 }
 
 main a#yt-link {
   font-family: "Open Sans", sans-serif;
   display: inline-block;
-  flex-shrink: 0;
   font-size: 0.8rem;
-  color: black;
+  background: #09457e;
+  color: white;
+  border: 1px solid #333;
   text-decoration: none;
-  border: 1px solid red;
   border-radius: 5px;
   padding: 2px 10px;
   margin-top: 0.8rem;
 }
 
 main a#yt-link:hover {
-  background: #09457e;
-  color: white;
-  border: 1px solid #333;
+  background: white;
+  color: #09457e;
+  border: 1px solid red;
 }
 
 main p,
@@ -91,6 +96,12 @@ main ul {
 }
 
 /* Media Queries */
+@media (min-width: 700px) {
+  main {
+    padding: 5px 35px 25px;
+  }
+}
+
 @media (min-width: 768px) {
   main h1 {
     flex-direction: row;
@@ -98,5 +109,11 @@ main ul {
 
   .img-fluid-max {
     width: 60%;
+  }
+}
+
+@media (min-width: 900px) {
+  main {
+    padding: 5px 50px 25px;
   }
 }
