--- a/css/home.css
+++ b/css/home.css
@@ -7,29 +7,122 @@
 body {
   background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
   background-size: cover;
-  font-family: "Open Sans", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0 20px;
 }
 
-header {
+/* NAV */
+nav {
   background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
   background-size: cover;
-  text-align: center;
-  padding: 20px;
-  font-size: 1.25rem;
   position: sticky;
   top: 0;
   z-index: 1000;
+  padding: 15px 0;
 }
 
-header a {
+nav .wrapper {
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav a {
   text-decoration: none;
+}
+
+nav a#logo {
   color: white;
 }
 
-header img {
+nav a#js-ref {
+  color: #F5BD08;
+  border: 1px solid #F5BD08;
+  padding: 5px 15px;
+  border-radius: 50px;
+}
+
+nav a#js-ref:hover {
+  color: white;
+  border: 1px solid white;
+}
+
+nav img {
   vertical-align: middle;
 }
+
+/* Header */
+header {
+  text-align: center;
+  padding: 50px 0;
+}
+
+header h1 {
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  letter-spacing: 3px;
+  font-size: 3rem;
+  margin-bottom: 1.25rem;
+}
+
+header p.lead {
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  letter-spacing: 1.15px;
+  margin-bottom: 1.25rem;
+}
+
+header p.motto {
+  color: #F5BD08;
+  letter-spacing: 1.1px;
+  font-variant: small-caps;
+  font-size: 1.25rem;
+}
+
+/* Sections */
+section {
+  max-width: 800px;
+  margin: auto;
+  background: white;
+  padding: 20px 50px;
+  border-radius: 15px;
+  margin-bottom: 35px;
+  color: #333;
+}
+
+section h2 {
+  margin-bottom: 1rem;
+}
+
+section p.descr {
+  margin: 10px 0 15px;
+}
+
+section a.item {
+  display: block;
+  border: 1px solid #CCC;
+  border-radius: 5px;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: #333;
+  font-size: 1.15rem;
+}
+
+section a.item:hover {
+  background: #356DA2;
+  color: white;
+
+}
+
+section i {
+  margin-right: 10px;
+}
+
+
+
+
+
 
 main {
   background: white;
