--- a/css/page.css
+++ b/css/page.css
@@ -1,86 +1,63 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-  background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
-  background-size: cover;
-  padding: 0 20px;
-}
-
-header {
-  background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
-  background-size: cover;
-  text-align: center;
-  padding: 20px;
-  font-size: 1.25rem;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-
-header a {
-  text-decoration: none;
-  color: white;
-}
-
-header img {
-  vertical-align: middle;
-}
-
 main {
   background: white;
   max-width: 800px;
-  margin: 0 auto 100px;
+  margin: 20px auto 100px;
   padding: 5px 20px 25px;
   border-radius: 15px;
+  color: #333;
 }
 
-main h1 {
-  font-family: "Raleway", sans-serif;
-  font-variant: small-caps;
-  color: #09457e;
-  font-weight: 300;
+main div.title {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-direction: column;
 }
 
-main h2 {
-  font-family: "Economica", sans-serif;
-  color: #7e3409;
-  letter-spacing: 0.5px;
+main h1 {
   font-variant: small-caps;
-  font-size: 2rem;
-  font-weight: normal;
+  color: #444;
+  margin: 1.5rem 0 0.5rem;
 }
 
-main img#yt-img {
-  vertical-align: middle;
-  margin-right: 3px;
+main i {
+  margin-right: 2px;
 }
 
 main a#yt-link {
-  font-family: "Open Sans", sans-serif;
   display: inline-block;
-  font-size: 0.8rem;
-  background: #09457e;
+  background: #C29500;
   color: white;
-  border: 1px solid #333;
+  border: 1px solid #C29500;
   text-decoration: none;
-  border-radius: 5px;
-  padding: 2px 10px;
-  margin-top: 0.8rem;
+  border-radius: 50px;
+  padding: 5px 10px;
+  margin-top: 0.75rem;
+  font-size: 0.9rem;
 }
 
 main a#yt-link:hover {
   background: white;
-  color: #09457e;
-  border: 1px solid red;
+  color: #C29500;
 }
+
+main hr {
+  margin: 1rem auto;
+}
+
+main h2 {
+  color: #333;
+  letter-spacing: 0.5px;
+  font-variant: small-caps;
+  margin: 1rem 0;
+}
+
+main h3,
+main h4 {
+  margin: 1rem 0;
+}
+
+
 
 main p,
 main ul {
@@ -103,8 +80,13 @@ main ul {
 }
 
 @media (min-width: 768px) {
-  main h1 {
+  main div.title {
     flex-direction: row;
+    align-items: center;
+  }
+
+  main a#yt-link {
+    margin-top: 2rem;
   }
 
   .img-fluid-max {
