--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,7 +1,17 @@
-<div class="wrapper">
+<!-- For Publishing -->
+<!-- <div class="wrapper">
   <a id="logo" href="/hacs/index.html">
     <img src="/hacs/img/ainlay-logo.png" width="32">
     HACS
   </a>
   <a id="js-ref" href="/hacs/js-reference.html">JS Reference</a>
+</div> -->
+
+<!-- For Development -->
+<div class="wrapper">
+  <a id="logo" href="/index.html">
+    <img src="/img/ainlay-logo.png" width="32">
+    HACS
+  </a>
+  <a id="js-ref" href="/js-reference.html">JS Reference</a>
 </div>
