--- a/hacs/css/home.css
+++ b/hacs/css/home.css
@@ -9,6 +9,7 @@ body {
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0 20px;
+  margin-bottom: 200px;
 }
 
 /* NAV */
@@ -46,8 +47,8 @@ nav a#js-ref {
 }
 
 nav a#js-ref:hover {
-  color: white;
-  border: 1px solid white;
+  color: #FACF44;
+  border: 1px solid #FACF44;
 }
 
 nav img {
