--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,6 +1,6 @@
 <!-- For Publishing -->
 <div class="wrapper">
-  <a id="logo" href="/index.html">
+  <a id="logo" href="/hacs/">
     <img src="/hacs/img/ainlay-logo.png" width="32">
     HACS
   </a>
