--- a/css/page.css
+++ b/css/page.css
@@ -4,7 +4,7 @@ main {
   margin: 20px auto 100px;
   padding: 5px 20px 25px;
   border-radius: 15px;
-  color: #333;
+  color: #444;
 }
 
 main div.title {
@@ -16,7 +16,6 @@ main div.title {
 
 main h1 {
   font-variant: small-caps;
-  color: #444;
   margin: 1.5rem 0 0.5rem;
 }
 
@@ -44,10 +43,21 @@ main hr {
   margin: 1rem auto;
 }
 
+main p.description {
+  margin-bottom: 0.15rem;
+}
+
+main p.concept-list {
+  font-style: italic;
+  color: #777;
+  font-size: 0.9rem;
+  margin-top: 0;
+}
+
 main h2 {
   letter-spacing: 0.5px;
   font-variant: small-caps;
-  margin: 1rem 0;
+  margin: 2rem 0 0.25rem;
 }
 
 main h3,
@@ -74,10 +84,20 @@ main ul {
   width: 100%;
 }
 
+.box {
+  border: 1px solid #777;
+  padding: 20px;
+  margin-top: 1.5rem;
+}
+
+.box h2 {
+  margin-top: 0;
+}
+
 /* Media Queries */
 @media (min-width: 768px) {
   main {
-    padding: 5px 50px 25px;
+    padding: 5px 75px 25px;
   }
 
   main div.title {
