--- a/includes/nav.html
+++ b/includes/nav.html
@@ -13,5 +13,10 @@
     <img src="/img/ainlay-logo.png" width="32">
     HACS
   </a>
-  <a id="js-ref" href="/js-reference.html">JS Reference</a>
+  <!-- <div>
+    <a href="#" class="nav-link">CS10</a>
+    <a href="#" class="nav-link">CS20</a>
+    <a href="#" class="nav-link">CS30</a>
+  </div> -->
+  <!-- <a id="js-ref" href="/js-reference.html">JS Reference</a> -->
 </div>
