--- a/includes/nav.html
+++ b/includes/nav.html
@@ -4,7 +4,11 @@
     <img src="/hacs/img/ainlay-logo.png" width="32">
     HACS
   </a>
-  <a id="js-ref" href="/hacs/js-reference.html">JS Reference</a>
+  <div>
+    <a href="/hacs/cs10.html" class="nav-link active">CS10</a>
+    <a href="/hacs/cs20.html" class="nav-link">CS20</a>
+    <a href="/hacs/cs30.html" class="nav-link">CS30</a>
+  </div>
 </div> -->
 
 <!-- For Development -->
@@ -13,10 +17,9 @@
     <img src="/img/ainlay-logo.png" width="32">
     HACS
   </a>
-  <!-- <div>
-    <a href="#" class="nav-link">CS10</a>
-    <a href="#" class="nav-link">CS20</a>
-    <a href="#" class="nav-link">CS30</a>
-  </div> -->
-  <!-- <a id="js-ref" href="/js-reference.html">JS Reference</a> -->
+  <div>
+    <a href="/cs10.html" class="nav-link active">CS10</a>
+    <a href="/cs20.html" class="nav-link">CS20</a>
+    <a href="/cs30.html" class="nav-link">CS30</a>
+  </div>
 </div>
