--- a/templates/cs10-lesson-page-template.html
+++ b/templates/cs10-lesson-page-template.html
@@ -64,7 +64,7 @@
   <!-- Load Nav -->
   <script src="../js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("../includes/nav-cs10.html", "nav");
   </script>
 
   <script src="../js/prism.js"></script>
