line height column numbering

--- a/css/home.css
+++ b/css/home.css
@@ -152,8 +152,8 @@ section .li-div::before {
   top: 4px;
   left: 0;
   font-family: Consolas, Lucida Console, Menlo, Monaco, monospace;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem;
+  /* line-height: 16px; */
   counter-increment: b;
   content: counter(a) "."counter(b) " ";
 }
