--- a/css/home.css
+++ b/css/home.css
@@ -5,8 +5,7 @@
 }
 
 body {
-  background: url('../img/Harry-Ainlay_background-1600x700.png') no-repeat
-    center fixed;
+  background: url('../img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -16,8 +15,7 @@ body {
 
 /* NAV */
 nav {
-  background: url('../img/Harry-Ainlay_background-1600x700.png') no-repeat
-    center fixed;
+  background: url('../img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
   background-size: cover;
   position: sticky;
   top: 0;
@@ -160,7 +158,7 @@ section .li-div::before {
   font-size: 0.75rem;
   line-height: 1rem;
   counter-increment: b;
-  content: counter(a) '.' counter(b) ' ';
+  content: counter(a) '.'counter(b) ' ';
 }
 
 section .li-div {
@@ -176,7 +174,7 @@ section a {
 
 section a:hover {
   text-decoration: underline;
-  color: #c29500;
+  color: #9E3300;
 }
 
 section a.btn {
@@ -196,6 +194,15 @@ section a.btn:hover {
 .topic-heading {
   color: #c29500;
 }
+
+.red {
+  color: #9E3300;
+}
+
+.asgn-link {
+  font-weight: 600;
+}
+
 
 /* Media Queries */
 @media (min-width: 768px) {
