--- a/includes/nav-cs20.html
+++ b/includes/nav-cs20.html
@@ -8,5 +8,6 @@
     <a href="/hacs/cs10.html" class="nav-link">CS10</a>
     <a href="/hacs/cs20.html" class="nav-link active">CS20</a>
     <a href="/hacs/cs30.html" class="nav-link">CS30</a>
+    <a href="/hacs/js-reference.html" class="nav-link">JS <i class="far fa-sticky-note"></i></a>
   </div>
 </div>
