--- a/includes/nav-js-ref.html
+++ b/includes/nav-js-ref.html
@@ -5,9 +5,9 @@
     HACS
   </a>
   <div>
-    <a href="/hacs/cs10.html" class="nav-link active">CS10</a>
+    <a href="/hacs/cs10.html" class="nav-link">CS10</a>
     <a href="/hacs/cs20.html" class="nav-link">CS20</a>
     <a href="/hacs/cs30.html" class="nav-link">CS30</a>
-    <a href="/hacs/js-reference.html" class="nav-link">JS <i class="far fa-sticky-note"></i></a>
+    <a href="/hacs/js-reference.html" class="nav-link active">JS <i class="far fa-sticky-note"></i></a>
   </div>
 </div>
