update ds notes

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ body {
   width: 100%;
 }
 
+.indent-list {
+  padding-left: 3rem !important;
+}
+
 /* NAVIGATION */
 nav {
   background: url('/hacs/img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
@@ -381,6 +385,7 @@ h2.section-heading:not(:first-of-type) {
 
 /* MEDIA QUERIES */
 @media (min-width: 768px) {
+
   /* UTILITIES */
   .img-fluid-80 {
     width: 80%;
