--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  background: url('/hacs/img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
+  background: url('./img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
   background-size: cover;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, */
   /* Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
@@ -41,7 +41,7 @@ i {
 
 /* NAVIGATION */
 nav {
-  background: url('/hacs/img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
+  background: url('./img/Harry-Ainlay_background-1600x700.png') no-repeat center fixed;
   background-size: cover;
   position: sticky;
   top: 0;
