--- a/scss/partials/_props.scss
+++ b/scss/partials/_props.scss
@@ -2,7 +2,8 @@
   /* --orange: #FB9C1B; */
   --orange: #cf7902;
   --dark-orange: #a35e00;
-  --dark-red: #742600;
+  --dark-red: #aa0d02;
+  --darker-red: #8b0900;
   --blue: #1b65a2;
   --green: #286600;
   --yellow: #f5bd08;
