--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
   /* --orange: #FB9C1B; */
   --orange: #cf7902;
   --dark-orange: #a35e00;
-  --dark-red: #742600;
+  --dark-red: #aa0d02;
+  --darker-red: #8b0900;
   --blue: #1b65a2;
   --green: #286600;
   --yellow: #f5bd08;
@@ -234,38 +235,97 @@ main .courses a:hover {
     font-size: 1rem;
   }
 }
-.notes-content {
+.notes-list {
   counter-reset: a;
 }
-.notes-content ol {
+.notes-list ol {
   margin-bottom: 3rem;
   counter-increment: a;
   counter-reset: b;
   list-style: none;
   columns: 1;
 }
-.notes-content .li-div {
+.notes-list .li-div {
   margin-bottom: 5px;
 }
-.notes-content .li-div::before {
+.notes-list .li-div::before {
   font-family: var(--ff-mono);
   font-size: 0.85rem;
   line-height: 1rem;
   counter-increment: b;
   content: counter(a) "." counter(b) " ";
 }
-.notes-content a {
+.notes-list a {
   text-decoration: none;
   color: var(--blue);
 }
-.notes-content a:hover {
+.notes-list a:hover {
   text-decoration: underline;
   color: var(--dark-red);
 }
 
 @media (min-width: 48rem) {
-  .notes-content ol {
+  .notes-list ol {
     columns: 2;
+  }
+}
+.page-content .page-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.page-content a.back-link {
+  display: inline-block;
+  color: var(--dark-red);
+  text-decoration: none;
+}
+.page-content a.back-link:hover {
+  text-decoration: underline;
+}
+.page-content .yt-link {
+  border: 1px solid var(--dark-red);
+  color: white;
+  background-color: var(--dark-red);
+  font-size: 0.9rem;
+  border-radius: 5px;
+  padding: 4px 10px;
+  text-decoration: none;
+}
+.page-content .yt-link:hover {
+  background-color: var(--darker-red);
+}
+.page-content .yt-link i {
+  margin-right: 0.25rem;
+}
+.page-content h2 {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+}
+.page-content ol,
+.page-content ul {
+  padding-left: 1.55rem;
+}
+.page-content .summary {
+  color: var(--dark-red);
+}
+.page-content .check {
+  color: var(--green);
+}
+.page-content .attention-box {
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  padding: 0 20px 15px;
+  background: #eec;
+}
+.page-content .attention {
+  color: var(--yellow);
+}
+
+@media (min-width: 35rem) {
+  .page-content .page-nav {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
