--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ h1.main-heading {
   margin-bottom: 2.5rem;
 }
 
+.d-none {
+  display: none;
+}
+
 /* SECTION */
 section {
   background: white;
