--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -5,8 +5,7 @@
 }
 
 body {
-  background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat
-    center fixed;
+  background: url("../img/Harry-Ainlay_background-1600x700.png") no-repeat center fixed;
   background-size: cover;
   font-family: "Open Sans", sans-serif;
   color: #333;
@@ -25,6 +24,10 @@ h1.main-heading {
   letter-spacing: 0.15rem;
   color: white;
   margin-bottom: 2.5rem;
+}
+
+.d-none {
+  display: none;
 }
 
 /* SECTION */
